--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -570,7 +570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As seen in the histograms, all features except wind and temperature have outliers that need to be smoothed."
+    "As seen in the boxplot, all features except wind and temperature have outliers that need to be smoothed."
    ]
   },
   {
@@ -578,7 +578,59 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calculate quantile from each attributes\n",
+    "def calculate_quantile (feature:str, df:pd.DataFrame):\n",
+    "    Q1 = df[feature].quantile(0.25)\n",
+    "    Q3 = df[feature].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    min = df[feature].min()\n",
+    "    max = df[feature].max()\n",
+    "    min_IQR = Q1 - 1.5 * IQR\n",
+    "    max_IQR = Q3 + 1.5 * IQR\n",
+    "    \n",
+    "    return Q1, Q3, min, max, min_IQR, max_IQR\n",
+    "\n",
+    "# delete first and last rows to avoid missing value extrapolation\n",
+    "# df2.drop(index=[df2.index[0], df2.index[df2.shape[0]-1]], inplace=True)\n",
+    "\n",
+    "# find and interpolate the outliers\n",
+    "for i in df2.columns:\n",
+    "    print('\\nAttribute-',i,':')\n",
+    "    Q1, Q3, min, max, min_IQR, max_IQR = calculate_quantile(i, df2)\n",
+    "    print('Q1 = %.2f' % Q1)\n",
+    "    print('Q3 = %.2f' % Q3)\n",
+    "    print('min IQR = %.2f' % min_IQR)\n",
+    "    print('max IQR = %.2f' % max_IQR)\n",
+    "    if (min < min_IQR):\n",
+    "        print('---> Low outlier is found = %.2f' % min)\n",
+    "    if (max > max_IQR):\n",
+    "        print('---> High outlier is found = %.2f' % max)\n",
+    "    \n",
+    "    def convert_nan (x, max_IQR=max_IQR, min_IQR=min_IQR):\n",
+    "        if ((x > max_IQR) | (x < min_IQR)):\n",
+    "            x = np.nan\n",
+    "        else:\n",
+    "            x = x\n",
+    "        return x\n",
+    "\n",
+    "    def convert_nan_HUM (x, max_IQR=100.0, min_IQR=min_IQR):\n",
+    "        if ((x > max_IQR) | (x < min_IQR)):\n",
+    "            x = np.nan\n",
+    "        else:\n",
+    "            x = x\n",
+    "        return x\n",
+    "    \n",
+    "    if (i == 'HUM'):\n",
+    "        df2[i] = df2[i].map(convert_nan_HUM)\n",
+    "        df2[i] = df2[i].interpolate(method='linear')\n",
+    "    if (i != 'HUM'):\n",
+    "        df2[i] = df2[i].map(convert_nan)\n",
+    "        df2[i] = df2[i].interpolate(method='linear')\n",
+    "    \n",
+    "    if (len(df2[df2[i].isnull()][i]) == 0):\n",
+    "        print('################  Outliers have been interpolated  ################')\n"
+   ]
   }
  ],
  "metadata": {
