--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -21,19 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import zscore # For outliers\n",
+    "from sklearn.preprocessing import StandardScaler # Data normalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +437,7 @@
        "max    351.951809  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -575,62 +577,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate quantile from each attributes\n",
-    "def calculate_quantile (feature:str, df:pd.DataFrame):\n",
-    "    Q1 = df[feature].quantile(0.25)\n",
-    "    Q3 = df[feature].quantile(0.75)\n",
-    "    IQR = Q3 - Q1\n",
-    "    min = df[feature].min()\n",
-    "    max = df[feature].max()\n",
-    "    min_IQR = Q1 - 1.5 * IQR\n",
-    "    max_IQR = Q3 + 1.5 * IQR\n",
-    "    \n",
-    "    return Q1, Q3, min, max, min_IQR, max_IQR\n",
+    "def remove_outliers_zscore(series: pd.Series, threshold: float = 3.0) -> pd.Series:\n",
+    "    z_scores = np.abs(zscore(series, nan_policy='omit'))  # Handle NaN safely\n",
+    "    return series.where(z_scores < threshold, np.nan)\n",
     "\n",
-    "# delete first and last rows to avoid missing value extrapolation\n",
-    "# df2.drop(index=[df2.index[0], df2.index[df2.shape[0]-1]], inplace=True)\n",
-    "\n",
-    "# find and interpolate the outliers\n",
-    "for i in df2.columns:\n",
-    "    print('\\nAttribute-',i,':')\n",
-    "    Q1, Q3, min, max, min_IQR, max_IQR = calculate_quantile(i, df2)\n",
-    "    print('Q1 = %.2f' % Q1)\n",
-    "    print('Q3 = %.2f' % Q3)\n",
-    "    print('min IQR = %.2f' % min_IQR)\n",
-    "    print('max IQR = %.2f' % max_IQR)\n",
-    "    if (min < min_IQR):\n",
-    "        print('---> Low outlier is found = %.2f' % min)\n",
-    "    if (max > max_IQR):\n",
-    "        print('---> High outlier is found = %.2f' % max)\n",
-    "    \n",
-    "    def convert_nan (x, max_IQR=max_IQR, min_IQR=min_IQR):\n",
-    "        if ((x > max_IQR) | (x < min_IQR)):\n",
-    "            x = np.nan\n",
-    "        else:\n",
-    "            x = x\n",
-    "        return x\n",
-    "\n",
-    "    def convert_nan_HUM (x, max_IQR=100.0, min_IQR=min_IQR):\n",
-    "        if ((x > max_IQR) | (x < min_IQR)):\n",
-    "            x = np.nan\n",
-    "        else:\n",
-    "            x = x\n",
-    "        return x\n",
-    "    \n",
-    "    if (i == 'HUM'):\n",
-    "        df2[i] = df2[i].map(convert_nan_HUM)\n",
-    "        df2[i] = df2[i].interpolate(method='linear')\n",
-    "    if (i != 'HUM'):\n",
-    "        df2[i] = df2[i].map(convert_nan)\n",
-    "        df2[i] = df2[i].interpolate(method='linear')\n",
-    "    \n",
-    "    if (len(df2[df2[i].isnull()][i]) == 0):\n",
-    "        print('################  Outliers have been interpolated  ################')\n"
+    "def remove_outliers_z(features, df):\n",
+    "    # find and replace outliers with null\n",
+    "    for feature in features:\n",
+    "        df[feature] = remove_outliers_zscore(df[feature])\n",
+    "    return df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['o3', 'pm10', 'pm25', 'rh', 'ws']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_smoothed = remove_outliers_z(features, df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_smoothed[\"wd\"] = df[\"wd\"]\n",
+    "df_smoothed[\"tmp\"] = df[\"tmp\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Interpolate missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the data has been smoothed, I can now interpolate the missing data. The interpolation methods that I will be using will be:\n",
+    "- **Forward Fill:** Carries previous data forward.\n",
+    "- **Backward Fill:** Carrios previous data backward.\n",
+    "- **Linear interpolation (for any left out values):** Inserts value between the data points assuming there is a line or curve to the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = df_smoothed.columns\n",
+    "df_interpolated = df_smoothed.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for feature in features:\n",
+    "    df_interpolated[feature] = df_interpolated[feature].ffill().bfill().interpolate(method=\"linear\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As can be seen, there are no more null values in the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 365 entries, 2023-01-01 to 2023-12-31\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   o3      365 non-null    float64\n",
+      " 1   pm10    365 non-null    float64\n",
+      " 2   pm25    365 non-null    float64\n",
+      " 3   tmp     365 non-null    float64\n",
+      " 4   rh      365 non-null    float64\n",
+      " 5   ws      365 non-null    float64\n",
+      " 6   wd      365 non-null    float64\n",
+      "dtypes: float64(7)\n",
+      "memory usage: 22.8 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_interpolated.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalize data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
