feat: interpolated complete

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import zscore # For outliers\n",
-    "from sklearn.preprocessing import StandardScaler # Data normalization"
+    "from sklearn.preprocessing import StandardScaler # Data normalization\n",
+    "from sklearn.impute import KNNImputer # Fill Nan with KNN"
    ]
   },
   {
@@ -640,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,12 +651,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "for feature in features:\n",
-    "    df_interpolated[feature] = df_interpolated[feature].ffill().bfill().interpolate(method=\"linear\")"
+    "    df_interpolated[feature] = df_interpolated[feature].ffill().bfill().interpolate(method=\"linear\")\n",
+    "    "
    ]
   },
   {
@@ -667,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalize data"
+    "## Save data"
    ]
   },
   {
@@ -707,7 +709,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_interpolated.to_csv('datasets/semadet-tlaquepaque-2023-interpolated.csv')"
+   ]
   }
  ],
  "metadata": {
