feat: dataset to supervised

--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/b6/r8x8vgk95n1gjf60w26y4dr80000gn/T/ipykernel_3977/2730506958.py:3: DtypeWarning: Columns (19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(filepath,\n"
+     ]
+    }
+   ],
    "source": [
-    "filepath = \"datasets/semadet-aire-2023.csv\"\n",
+    "filepath = \"datasets/semadet-aire-2022.csv\"\n",
     "\n",
     "df = pd.read_csv(filepath,\n",
     "                     encoding='utf-8',\n",
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -116,115 +125,115 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Aguilas</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>61.8</td>\n",
-       "      <td>58.1</td>\n",
-       "      <td>12.6</td>\n",
-       "      <td>88.7</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>190.77</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>SE</td>\n",
+       "      <td>Oblatos</td>\n",
+       "      <td>1/1/2022</td>\n",
+       "      <td>12:00:00 AM</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Aguilas</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>83.8</td>\n",
-       "      <td>76.5</td>\n",
-       "      <td>12.1</td>\n",
-       "      <td>89.8</td>\n",
-       "      <td>1.27</td>\n",
-       "      <td>215.13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SE</td>\n",
+       "      <td>Oblatos</td>\n",
+       "      <td>1/1/2022</td>\n",
+       "      <td>1:00:00 AM</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Aguilas</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>98.2</td>\n",
-       "      <td>95</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>89.5</td>\n",
-       "      <td>2.44</td>\n",
-       "      <td>240.82</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SE</td>\n",
+       "      <td>Oblatos</td>\n",
+       "      <td>1/1/2022</td>\n",
+       "      <td>2:00:00 AM</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Aguilas</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>109.9</td>\n",
-       "      <td>105.1</td>\n",
-       "      <td>11.4</td>\n",
-       "      <td>89.7</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>256.68</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>SE</td>\n",
+       "      <td>Oblatos</td>\n",
+       "      <td>1/1/2022</td>\n",
+       "      <td>3:00:00 AM</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Aguilas</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>85.4</td>\n",
-       "      <td>84.6</td>\n",
-       "      <td>10.9</td>\n",
-       "      <td>90</td>\n",
-       "      <td>0.44</td>\n",
-       "      <td>288.14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SE</td>\n",
+       "      <td>Oblatos</td>\n",
+       "      <td>1/1/2022</td>\n",
+       "      <td>4:00:00 AM</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  estacion       date  hora     o3 no2 so2  co   pm10   pm25   tmp    rh  \\\n",
-       "0  Aguilas 2023-01-01     0  0.002  SE  SE  SE   61.8   58.1  12.6  88.7   \n",
-       "1  Aguilas 2023-01-01     1  0.002  SE  SE  SE   83.8   76.5  12.1  89.8   \n",
-       "2  Aguilas 2023-01-01     2  0.003  SE  SE  SE   98.2     95  11.8  89.5   \n",
-       "3  Aguilas 2023-01-01     3  0.003  SE  SE  SE  109.9  105.1  11.4  89.7   \n",
-       "4  Aguilas 2023-01-01     4  0.002  SE  SE  SE   85.4   84.6  10.9    90   \n",
+       "  estacion      date         hora  o3 no2 so2  co pm10 pm25 tmp  rh  ws  wd  \\\n",
+       "0  Oblatos  1/1/2022  12:00:00 AM  IF  IF  IF  IF   IF   IF  IF  IR  IF  IF   \n",
+       "1  Oblatos  1/1/2022   1:00:00 AM  IF  IF  IF  IF   IF   IF  IF  IR  IF  IF   \n",
+       "2  Oblatos  1/1/2022   2:00:00 AM  IF  IF  IF  IF   IF   IF  IF  IR  IF  IF   \n",
+       "3  Oblatos  1/1/2022   3:00:00 AM  IF  IF  IF  IF   IF   IF  IF  IR  IF  IF   \n",
+       "4  Oblatos  1/1/2022   4:00:00 AM  IF  IF  IF  IF   IF   IF  IF  IR  IF  IF   \n",
        "\n",
-       "     ws      wd    pp pba  \n",
-       "0  0.38  190.77  0.25  SE  \n",
-       "1  1.27  215.13     0  SE  \n",
-       "2  2.44  240.82     0  SE  \n",
-       "3  0.43  256.68  0.25  SE  \n",
-       "4  0.44  288.14     0  SE  "
+       "   pp  pba  \n",
+       "0  IF  NaN  \n",
+       "1  IF  NaN  \n",
+       "2  IF  NaN  \n",
+       "3  IF  NaN  \n",
+       "4  IF  NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -291,26 +300,26 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 87600 entries, 0 to 87599\n",
+      "RangeIndex: 87601 entries, 0 to 87600\n",
       "Data columns (total 15 columns):\n",
-      " #   Column    Non-Null Count  Dtype         \n",
-      "---  ------    --------------  -----         \n",
-      " 0   estacion  87600 non-null  object        \n",
-      " 1   date      87600 non-null  datetime64[ns]\n",
-      " 2   hora      87600 non-null  int64         \n",
-      " 3   o3        49551 non-null  object        \n",
-      " 4   no2       0 non-null      float64       \n",
-      " 5   so2       0 non-null      float64       \n",
-      " 6   co        28843 non-null  object        \n",
-      " 7   pm10      57768 non-null  object        \n",
-      " 8   pm25      50068 non-null  object        \n",
-      " 9   tmp       44625 non-null  object        \n",
-      " 10  rh        46416 non-null  object        \n",
-      " 11  ws        49970 non-null  object        \n",
-      " 12  wd        39858 non-null  object        \n",
-      " 13  pp        38714 non-null  object        \n",
-      " 14  pba       39048 non-null  object        \n",
-      "dtypes: datetime64[ns](1), float64(2), int64(1), object(11)\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   estacion  87601 non-null  object \n",
+      " 1   date      87601 non-null  object \n",
+      " 2   hora      87601 non-null  object \n",
+      " 3   o3        52589 non-null  object \n",
+      " 4   no2       0 non-null      float64\n",
+      " 5   so2       12182 non-null  object \n",
+      " 6   co        17050 non-null  object \n",
+      " 7   pm10      47036 non-null  object \n",
+      " 8   pm25      22705 non-null  object \n",
+      " 9   tmp       28929 non-null  object \n",
+      " 10  rh        47008 non-null  object \n",
+      " 11  ws        50641 non-null  object \n",
+      " 12  wd        17188 non-null  object \n",
+      " 13  pp        52454 non-null  object \n",
+      " 14  pba       38510 non-null  object \n",
+      "dtypes: float64(1), object(14)\n",
       "memory usage: 10.0+ MB\n"
      ]
     }
