--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,12 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import zscore # For outliers\n",
-    "from sklearn.preprocessing import StandardScaler # Data normalization\n",
-    "from sklearn.impute import KNNImputer # Fill Nan with KNN"
+    "from scipy.stats import zscore # For outliers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,6 +656,133 @@
     "for feature in features:\n",
     "    df_interpolated[feature] = df_interpolated[feature].ffill().bfill().interpolate(method=\"linear\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>o3</th>\n",
+       "      <th>pm10</th>\n",
+       "      <th>pm25</th>\n",
+       "      <th>tmp</th>\n",
+       "      <th>rh</th>\n",
+       "      <th>ws</th>\n",
+       "      <th>wd</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-01-01</th>\n",
+       "      <td>0.017917</td>\n",
+       "      <td>26.115000</td>\n",
+       "      <td>18.194167</td>\n",
+       "      <td>17.595652</td>\n",
+       "      <td>56.725000</td>\n",
+       "      <td>1.988750</td>\n",
+       "      <td>198.013158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-02</th>\n",
+       "      <td>0.013500</td>\n",
+       "      <td>26.115000</td>\n",
+       "      <td>18.194167</td>\n",
+       "      <td>16.381250</td>\n",
+       "      <td>56.725000</td>\n",
+       "      <td>2.904583</td>\n",
+       "      <td>235.478057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-03</th>\n",
+       "      <td>0.012375</td>\n",
+       "      <td>37.117917</td>\n",
+       "      <td>24.248333</td>\n",
+       "      <td>16.889474</td>\n",
+       "      <td>52.979167</td>\n",
+       "      <td>2.114167</td>\n",
+       "      <td>225.967935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-04</th>\n",
+       "      <td>0.020875</td>\n",
+       "      <td>89.490417</td>\n",
+       "      <td>42.726250</td>\n",
+       "      <td>18.440909</td>\n",
+       "      <td>49.941667</td>\n",
+       "      <td>0.937500</td>\n",
+       "      <td>172.467173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-05</th>\n",
+       "      <td>0.020250</td>\n",
+       "      <td>123.436250</td>\n",
+       "      <td>66.064167</td>\n",
+       "      <td>19.333333</td>\n",
+       "      <td>39.241667</td>\n",
+       "      <td>1.276667</td>\n",
+       "      <td>146.064584</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  o3        pm10       pm25        tmp         rh        ws  \\\n",
+       "date                                                                          \n",
+       "2023-01-01  0.017917   26.115000  18.194167  17.595652  56.725000  1.988750   \n",
+       "2023-01-02  0.013500   26.115000  18.194167  16.381250  56.725000  2.904583   \n",
+       "2023-01-03  0.012375   37.117917  24.248333  16.889474  52.979167  2.114167   \n",
+       "2023-01-04  0.020875   89.490417  42.726250  18.440909  49.941667  0.937500   \n",
+       "2023-01-05  0.020250  123.436250  66.064167  19.333333  39.241667  1.276667   \n",
+       "\n",
+       "                    wd  \n",
+       "date                    \n",
+       "2023-01-01  198.013158  \n",
+       "2023-01-02  235.478057  \n",
+       "2023-01-03  225.967935  \n",
+       "2023-01-04  172.467173  \n",
+       "2023-01-05  146.064584  "
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_interpolated.head()"
    ]
   },
   {
