fix: new file directories

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"datasets/semadet-tlaquepaque-2023.csv\"\n",
+    "filename = \"semadet-aire-2023\"\n",
+    "filepath = f\"datasets/preprocess/{filename}-processed.csv\"\n",
     "df = pd.read_csv(filepath, parse_dates=[0], index_col=0)"
    ]
   },
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +437,7 @@
        "max    351.951809  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +777,7 @@
        "2023-01-05  146.064584  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -831,11 +832,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_interpolated.to_csv('datasets/semadet-tlaquepaque-2023-interpolated.csv')"
+    "df_interpolated.to_csv(f\"datasets/feature_eng/{filename}-interpolated.csv\")"
    ]
   }
  ],
