--- a/reframe_dataset.ipynb
+++ b/reframe_dataset.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/valeriagonzalez/Documents/aqi/env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/Users/valeriagonzalez/Documents/aqi/env/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -41,11 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"datasets/semadet-tlaquepaque-2023-interpolated.csv\"\n",
+    "filename = \"semadet-aire-2023\"\n",
+    "filepath = f\"datasets/feature_eng/{filename}-interpolated.csv\"\n",
     "df = pd.read_csv(filepath, parse_dates=[0], index_col=0)"
    ]
   },
@@ -65,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +163,7 @@
        "2023-01-03  24.248333  16.889474  52.979167  2.114167  225.967935"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +211,7 @@
        "       [0.74056655, 0.4209641 , 0.56386168, 0.11338474, 0.41487319]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +354,7 @@
        "3   0.208685  0.208991  0.893364  0.278412  0.641957  0.443717"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -432,6 +422,99 @@
     "print(f\"Train set len: {len(train_df)}\")\n",
     "print(f\"Validation set len: {len(val_df)}\")\n",
     "print(f\"Test set len: {len(test_df)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pm25(t-1)</th>\n",
+       "      <th>tmp(t-1)</th>\n",
+       "      <th>rh(t-1)</th>\n",
+       "      <th>ws(t-1)</th>\n",
+       "      <th>wd(t-1)</th>\n",
+       "      <th>pm25(t)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.131678</td>\n",
+       "      <td>0.270243</td>\n",
+       "      <td>0.983210</td>\n",
+       "      <td>0.253699</td>\n",
+       "      <td>0.562510</td>\n",
+       "      <td>0.131678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.131678</td>\n",
+       "      <td>0.164909</td>\n",
+       "      <td>0.983210</td>\n",
+       "      <td>0.434163</td>\n",
+       "      <td>0.668984</td>\n",
+       "      <td>0.208685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.208685</td>\n",
+       "      <td>0.208991</td>\n",
+       "      <td>0.893364</td>\n",
+       "      <td>0.278412</td>\n",
+       "      <td>0.641957</td>\n",
+       "      <td>0.443717</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pm25(t-1)  tmp(t-1)   rh(t-1)   ws(t-1)   wd(t-1)   pm25(t)\n",
+       "1   0.131678  0.270243  0.983210  0.253699  0.562510  0.131678\n",
+       "2   0.131678  0.164909  0.983210  0.434163  0.668984  0.208685\n",
+       "3   0.208685  0.208991  0.893364  0.278412  0.641957  0.443717"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.to_csv(f\"datasets/reframe/train_{pollutant}.csv\")\n",
+    "val_df.to_csv(f\"datasets/reframe/val_{pollutant}.csv\")\n",
+    "test_df.to_csv(f\"datasets/reframe/test_{pollutant}.csv\")"
    ]
   }
  ],
