--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -829,6 +829,92 @@
    "source": [
     "df_daily.to_csv(f\"datasets/preprocess/{filename}-processed.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Integrate data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This same preprocessing has been repeated with data for several years until three acceptable datasets have been found, specifically for the years of 2017, 2020 and 2023. These datasets will be merged into one single dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename_2017 = \"semadet-aire-2017\"\n",
+    "filename_2020 = \"semadet-aire-2020\"\n",
+    "filename_2023 = \"semadet-aire-2023\"\n",
+    "\n",
+    "df_2017 = pd.read_csv(f\"datasets/preprocess/{filename_2017}-processed.csv\", index_col=[0], parse_dates=[0])\n",
+    "df_2020 = pd.read_csv(f\"datasets/preprocess/{filename_2020}-processed.csv\", index_col=[0], parse_dates=[0])\n",
+    "df_2023 = pd.read_csv(f\"datasets/preprocess/{filename_2023}-processed.csv\", index_col=[0], parse_dates=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames = [df_2017, df_2020, df_2023]\n",
+    "final_df = pd.concat(frames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 1097 entries, 2017-01-01 to 2023-12-31\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   o3      894 non-null    float64\n",
+      " 1   pm10    730 non-null    float64\n",
+      " 2   pm25    830 non-null    float64\n",
+      " 3   tmp     798 non-null    float64\n",
+      " 4   rh      1038 non-null   float64\n",
+      " 5   ws      1051 non-null   float64\n",
+      " 6   pp      1097 non-null   float64\n",
+      " 7   wd      971 non-null    float64\n",
+      "dtypes: float64(8)\n",
+      "memory usage: 77.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv(f\"datasets/preprocess/semadet-aire-final.csv\")"
+   ]
   }
  ],
  "metadata": {
